--- a/.github/workflows/reusable-workflow-to-run-tests.yml
+++ b/.github/workflows/reusable-workflow-to-run-tests.yml
@@ -29,4 +29,4 @@ jobs:
         env:
           GIT_CRYPT_KEY: ${{ secrets.GIT_CRYPT_KEY }}
       - name: Build with Maven
-        run: mvn -DexcludedGroups=${{ inputs.tags-of-tests-to-exclude }} -Dgroups=${{ inputs.tags-of-tests-to-include }} -B package --file pom.xml
+        run: mvn -DexcludedGroups=${{ inputs.tags-of-tests-to-exclude }} -Dgroups=${{ inputs.tags-of-tests-to-include }} -DTRIGGERED_BY="${{ github.event_name }}" -B package --file pom.xml
