ngrok expose localhost

--- a/src/main/resources/choices.conf
+++ b/src/main/resources/choices.conf
@@ -5,4 +5,4 @@ TEST_ENV = "DEVELOP"
 
 # Elastic choices
 PUBLISH_RESULTS_TO_ELASTIC = true   # to publish or not to publish
-ELASTIC_SERVER = "ON_LOCALHOST_INSECURE"  # server choices (ON_CLOUD, ON_LOCALHOST_INSECURE, ON_LOCALHOST_SECURE)
+ELASTIC_SERVER = "ON_CLOUD_NGROK"  # server choices (ON_CLOUD, ON_CLOUD_NGROK, ON_LOCALHOST_INSECURE, ON_LOCALHOST_SECURE)
